Fixed analysis page scrolling on mobile

--- a/web/src/containers/PageAnalysis/style.scss
+++ b/web/src/containers/PageAnalysis/style.scss
@@ -10,6 +10,7 @@
         width: 100%;
         height: 1em;
         display: flex;
+        flex: 0 0 auto;
         .data-item {
             display: block;
             flex-grow: 1;
@@ -224,7 +225,9 @@
             height: 300px;
         }
         .tree {
+            flex-grow: 0;
             padding: 0.3em;
+            overflow-y: auto;
         }
     }
 }
